src/components/FacetCuisine/FacetCuisine.css
.facet {
  margin-bottom: 16px;
}

.facet__title {
  font-size: 16px;
  line-height: 20px;
  margin-bottom: 4px;
}

.facet ul {
  list-style: none;
  margin: 0;
  padding: 0;
  overflow: hidden;
}

.facet ul > li {
  display: flex;
  justify-content: space-between;
  overflow: hidden;
  font-size: 14px;
  line-height: 20px;
}

.facet li[data-name] {
  cursor: pointer;
}

.facet li[data-name]:hover {
  background: white;
}

.facet__name {
  flex: 1 1 auto;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.facet__count {
  flex: 0 0 auto;
  color: #888;
  margin-left: 8px;
}

.facet__more button {
  appearance: none;
  background: transparent;
  border: 0;
  margin: 0;
  padding: 0;
  font-size: 14px;
  font-family: 'Work Sans', sans-serif;
  text-decoration: underline;
  cursor: pointer;
  line-height: 20px;
}

.facet__more button:hover {
  color: var(--brand-color);
}

